<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FAF9F5"
        android:id="@+id/layoutLogin"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:background="@drawable/drawable_search_rectangle"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:text="@string/string_email"
                    android:textColor="@color/color_black"
                    android:gravity="left|center_vertical"
                    tools:ignore="RtlHardcoded" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/editLoginUser"
                    android:background="@drawable/drawable_search_rectangle"
                    android:layout_margin="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:text="@string/string_password"
                    android:gravity="left|center_vertical|center"
                    android:textColor="@color/color_black"
                    tools:ignore="RtlHardcoded" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/editLoginPassword"
                    android:background="@drawable/drawable_search_rectangle"
                    android:layout_margin="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/string_forget_password"
                    android:id="@+id/editLoginForget"
                    android:gravity="left|center_vertical|center"
                    android:textColor="#37A0CA"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/string_login"
                    android:id="@+id/btnLoginLogin"
                    android:background="@drawable/drawable_class_book"
                    android:textColor="@color/color_white"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/string_loginFace"
                    android:id="@+id/btnLoginFaceBook"
                    android:background="@drawable/drawable_class_book"
                    android:textColor="@color/color_white"
                    android:layout_marginLeft="10dp"
                    tools:ignore="ButtonStyle,RtlHardcoded" />


                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/string_signup"
                    android:id="@+id/btnLoginSignUp"
                    android:background="@drawable/drawable_class_book"
                    android:textColor="@color/color_white"
                    android:layout_marginLeft="10dp"
                    tools:ignore="ButtonStyle,RtlHardcoded" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>