<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/string_list"
                    android:id="@+id/txtGymTabList"
                    android:textColor="@color/color_black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/string_map"
                    android:id="@+id/txtGymTabMap"
                    android:gravity="center"
                    android:textColor="@color/color_black"
                    android:textSize="18sp"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/layoutSort"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/string_sort1"
                    android:id="@+id/txtSortOpen"
                    android:textColor="@color/color_black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/string_sort12"
                    android:id="@+id/txtSortDistance"
                    android:gravity="center"
                    android:textColor="@color/color_black"
                    android:textSize="18sp"
                    android:layout_weight="1" />
            </LinearLayout>



            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FAF9F5">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lstGyms"
                    android:layout_weight="1"
                    tools:ignore="ObsoleteLayoutParam"
                    android:divider="@null"
                    android:dividerHeight="0dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/layoutGymMap">

                    <fragment
                        android:id="@+id/map1"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>